--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="header">
-        <h1>Dog Gallery</h1>
-    </div>
-    <div id="loader">
-    </div>
-    <div class="gallery-container">
-        <div id="gallery"></div>
+    <div class="gallery-main-wrapper">
+        <div id="header">
+            <h1>Dog Gallery</h1>
+        </div>
+        <div id="loader">
+        </div>
+        <div class="gallery-container">
+            <div id="gallery"></div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
